# MiniML-Engine

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py  test_api.py  test_ml_runtime.py
.github/workflows/: benchmarks.yml
adapters/: __init__.py
adapters/cmsis_nn/: __init__.py  adapter.py
docs/: Documentación MiniML-Engine.md  MiniML Engine Documentation.md  guia_cuantificacion.md  quantization.md  quantization_guide.md
estimators/: __init__.py  memory_estimator.py
miniml/: __init__.py  ml_exporter.py  ml_factory.py  ml_manager.py  ml_runtime.py
miniml/autograd/: layers.py  optim.py  qat.py  tensor.py
miniml/dsp/: dsp_runtime.py
miniml/exporters/: cpp_writer.py  library_packer.py  quantizer.py  rust_writer.py
miniml/hardware/: serial_manager.py  virtual_sensor.py
miniml_cli/: main.py
tests/: generador_edge.py  test_conv1d.py  test_conv2d.py  test_export.py  test_flatten.py  test_memory_estimators.py  test_mlp_scaler.py  test_nn_suite.py  test_packer.py  test_produccion.py  test_quantization.py  test_residual1d.py  test_rf_legacy.py  test_separable2d.py  test_svm_knn.py
