[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniml"
version = "1.0.0"
description = "A lightweight, dependency-free Machine Learning framework for Embedded Systems"
readme = "README.md"
authors = [
  { name="Michego Takoro", email="tmichego@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Embedded Systems",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]
dependencies = []

[project.optional-dependencies]
faster-training = [
    "scikit-learn>=1.0.0",
    "numpy",
    "scipy"
    ]

[tool.setuptools.packages.find]
where = ["."]
include = ["miniml*"]