[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniml-engine"
version = "1.1.2"
description = "Edge AI and Embedded Machine Learning Framework (Zero-Dependencies)"
readme = "README.md"
authors = [
  { name="Wilner Manzanares (Michego Takoro 'Shuuida')", email="tmichego@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Embedded Systems",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]
dependencies = []

[project.optional-dependencies]
faster-training = [
    "scikit-learn>=1.0.0",
    "numpy",
    "scipy"
]

hardware = [
    "pyserial"
]

[project.scripts]
miniml = "miniml_cli.main:main"

[project.urls]
"Homepage" = "https://github.com/Shuuida/MiniML-Engine"
"Bug Tracker" = "https://github.com/Shuuida/MiniML-Engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["miniml*", "estimators*", "adapters*", "miniml_cli*"]